--- a/Account_/Payment_Option_Cell.xib
+++ b/Account_/Payment_Option_Cell.xib
@@ -44,7 +44,7 @@
                             <outlet property="delegate" destination="KGk-i7-Jjw" id="Mgu-Ga-gv5"/>
                         </connections>
                     </collectionView>
-                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fD3-Jj-Rom">
+                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fD3-Jj-Rom">
                         <rect key="frame" x="10" y="117" width="324" height="153"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <connections>
