--- a/HT_Player_ViewController.xib
+++ b/HT_Player_ViewController.xib
@@ -445,7 +445,7 @@
                                 <constraint firstAttribute="width" constant="46" id="jdk-cZ-2EM"/>
                             </constraints>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36j-Sm-o4j">
+                        <button opaque="NO" tag="33" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36j-Sm-o4j">
                             <rect key="frame" x="288.5" y="17.5" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="LZg-yR-5Kh"/>
@@ -453,10 +453,10 @@
                             </constraints>
                             <state key="normal" image="next_s"/>
                             <connections>
-                                <action selector="playNext" destination="-1" eventType="touchUpInside" id="vwi-Jj-WCZ"/>
+                                <action selector="playNext:" destination="-1" eventType="touchUpInside" id="CjS-NA-y46"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RBC-UG-zvy">
+                        <button opaque="NO" tag="22" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RBC-UG-zvy">
                             <rect key="frame" x="240.5" y="12.5" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="0ao-Q3-gkF"/>
@@ -467,7 +467,7 @@
                                 <action selector="didPressPause:" destination="-1" eventType="touchUpInside" id="fY6-ft-NW6"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m7r-ID-hea">
+                        <button opaque="NO" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m7r-ID-hea">
                             <rect key="frame" x="197.5" y="17.5" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="0ds-65-y2a"/>
@@ -475,7 +475,7 @@
                             </constraints>
                             <state key="normal" image="back_s"/>
                             <connections>
-                                <action selector="playPrevious" destination="-1" eventType="touchUpInside" id="0zL-3e-Xwm"/>
+                                <action selector="playPrevious:" destination="-1" eventType="touchUpInside" id="dHV-GM-BQH"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QtI-1o-jbn">
@@ -581,16 +581,7 @@
         </tapGestureRecognizer>
     </objects>
     <designables>
-        <designable name="591-in-Scm">
-            <size key="intrinsicContentSize" width="-1" height="30"/>
-        </designable>
         <designable name="8uT-eY-7rd"/>
-        <designable name="gvk-hz-ibK">
-            <size key="intrinsicContentSize" width="-1" height="30"/>
-        </designable>
-        <designable name="p89-TW-Nhy">
-            <size key="intrinsicContentSize" width="-1" height="30"/>
-        </designable>
     </designables>
     <resources>
         <image name="back_D" width="99.5" height="99.5"/>
