--- a/Account_/PC_Inner_Info_ViewController.xib
+++ b/Account_/PC_Inner_Info_ViewController.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -533,7 +534,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dxl-pt-DBY">
                         <rect key="frame" x="10" y="0.0" width="394" height="474"/>
                         <subviews>
-                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C6f-PR-M6l">
+                            <view clipsSubviews="YES" tag="68" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C6f-PR-M6l">
                                 <rect key="frame" x="20" y="185" width="354" height="52"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -588,7 +589,7 @@
                                 <color key="textColor" red="0.89411764709999997" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bCn-AI-xXW">
+                            <view clipsSubviews="YES" tag="67" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bCn-AI-xXW">
                                 <rect key="frame" x="21" y="103" width="354" height="52"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -627,7 +628,7 @@
                             </textField>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JgD-12-5FD">
                                 <rect key="frame" x="21" y="21" width="354" height="52"/>
-                                <color key="backgroundColor" red="0.85882352941176465" green="0.85882352941176465" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="LOY-Tc-mk7"/>
                                 </constraints>
@@ -662,7 +663,7 @@
                                     <outlet property="delegate" destination="-1" id="wJK-Q4-i1K"/>
                                 </connections>
                             </textField>
-                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jg4-kB-WkD">
+                            <view clipsSubviews="YES" tag="69" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jg4-kB-WkD">
                                 <rect key="frame" x="21" y="271" width="353" height="52"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -810,6 +811,9 @@
         <image name="radio_in" width="38.5" height="36.5"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
