--- a/Publisher_/Publisher_ViewController.xib
+++ b/Publisher_/Publisher_ViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -11,6 +11,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Publisher_ViewController">
             <connections>
+                <outlet property="labelHeight" destination="20h-Zn-LOH" id="nl6-WQ-PYm"/>
+                <outlet property="searchBg" destination="I8h-Sv-Pv6" id="Eio-on-SdB"/>
+                <outlet property="searchButton" destination="2Ry-Pc-aQJ" id="06S-pg-ypm"/>
+                <outlet property="searchView" destination="qUT-97-FHr" id="rSI-qn-P3Q"/>
                 <outlet property="tableView" destination="2uV-zL-MGT" id="VhK-lv-L5x"/>
                 <outlet property="titleLabel" destination="sVo-DK-x6V" id="Gz4-pv-4GR"/>
                 <outlet property="view" destination="s2R-jR-v9s" id="SSs-td-6Yi"/>
@@ -18,11 +22,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="s2R-jR-v9s">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n60-7A-NpQ">
-                    <rect key="frame" x="0.0" y="44" width="414" height="64"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dhp-BX-hGz">
                             <rect key="frame" x="8" y="10" width="44" height="44"/>
@@ -36,7 +40,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nhà xuất bản" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sVo-DK-x6V">
-                            <rect key="frame" x="60" y="16" width="294" height="33"/>
+                            <rect key="frame" x="60" y="16" width="200" height="33"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="33" id="Mil-zD-mZo"/>
                             </constraints>
@@ -44,41 +48,107 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ry-Pc-aQJ">
+                            <rect key="frame" x="268" y="12" width="44" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="Bor-aL-2Gs"/>
+                                <constraint firstAttribute="width" constant="44" id="hUr-Av-et5"/>
+                            </constraints>
+                            <state key="normal" image="ic_search"/>
+                            <connections>
+                                <action selector="didPressSearch:" destination="-1" eventType="touchUpInside" id="3BW-QI-M99"/>
+                            </connections>
+                        </button>
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I8h-Sv-Pv6">
+                            <rect key="frame" x="60" y="13" width="200" height="38"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_search" translatesAutoresizingMaskIntoConstraints="NO" id="432-4k-CYe">
+                                    <rect key="frame" x="167" y="6.5" width="25" height="25"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="25" id="PDA-zJ-gn7"/>
+                                        <constraint firstAttribute="width" constant="25" id="gXC-xj-YdY"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="432-4k-CYe" firstAttribute="centerY" secondItem="I8h-Sv-Pv6" secondAttribute="centerY" id="HgJ-0O-GHp"/>
+                                <constraint firstAttribute="trailing" secondItem="432-4k-CYe" secondAttribute="trailing" constant="8" id="YJ2-TQ-P2S"/>
+                                <constraint firstAttribute="height" constant="38" id="ZIo-gu-kVD"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <real key="value" value="20.5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Từ khóa tìm kiếm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qUT-97-FHr">
+                            <rect key="frame" x="68" y="15" width="155" height="34"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="34" id="aF1-Iy-col"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="c3l-x2-IiF"/>
+                            </connections>
+                        </textField>
                     </subviews>
                     <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="Dhp-BX-hGz" firstAttribute="top" secondItem="n60-7A-NpQ" secondAttribute="top" constant="10" id="0sW-Qo-ydD"/>
                         <constraint firstItem="Dhp-BX-hGz" firstAttribute="leading" secondItem="n60-7A-NpQ" secondAttribute="leading" constant="8" id="5Eq-zb-YuA"/>
+                        <constraint firstItem="2Ry-Pc-aQJ" firstAttribute="leading" secondItem="qUT-97-FHr" secondAttribute="trailing" constant="45" id="7GY-5F-g3d"/>
+                        <constraint firstItem="I8h-Sv-Pv6" firstAttribute="leading" secondItem="Dhp-BX-hGz" secondAttribute="trailing" constant="8" symbolic="YES" id="9uO-Zj-5ev"/>
                         <constraint firstAttribute="height" constant="64" id="BXc-OE-saF"/>
+                        <constraint firstAttribute="trailing" secondItem="2Ry-Pc-aQJ" secondAttribute="trailing" constant="8" id="GDj-Hv-YaK"/>
                         <constraint firstItem="sVo-DK-x6V" firstAttribute="top" secondItem="n60-7A-NpQ" secondAttribute="top" constant="16" id="JaZ-hi-4fa"/>
+                        <constraint firstItem="qUT-97-FHr" firstAttribute="top" secondItem="n60-7A-NpQ" secondAttribute="top" constant="15" id="NEv-kZ-YZG"/>
                         <constraint firstAttribute="trailing" secondItem="sVo-DK-x6V" secondAttribute="trailing" constant="60" id="QMm-wA-K8w"/>
+                        <constraint firstItem="qUT-97-FHr" firstAttribute="leading" secondItem="Dhp-BX-hGz" secondAttribute="trailing" constant="16" id="TFS-aV-CCa"/>
                         <constraint firstItem="sVo-DK-x6V" firstAttribute="leading" secondItem="Dhp-BX-hGz" secondAttribute="trailing" constant="8" id="XYN-s3-rqC"/>
+                        <constraint firstItem="2Ry-Pc-aQJ" firstAttribute="leading" secondItem="I8h-Sv-Pv6" secondAttribute="trailing" constant="8" symbolic="YES" id="aCl-tr-HGi"/>
+                        <constraint firstItem="2Ry-Pc-aQJ" firstAttribute="top" secondItem="n60-7A-NpQ" secondAttribute="top" constant="12" id="gTX-kn-i2u"/>
+                        <constraint firstItem="I8h-Sv-Pv6" firstAttribute="top" secondItem="n60-7A-NpQ" secondAttribute="top" constant="13" id="yaF-X0-fg6"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2uV-zL-MGT">
-                    <rect key="frame" x="0.0" y="108" width="414" height="754"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2uV-zL-MGT">
+                    <rect key="frame" x="0.0" y="101" width="320" height="467"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="2Ha-S1-uhc"/>
                         <outlet property="delegate" destination="-1" id="WRJ-It-UnE"/>
                     </connections>
                 </tableView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KẾT QUẢ PHÙ HỢP NHẤT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z5v-1f-DUk">
+                    <rect key="frame" x="16" y="72" width="288" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="20h-Zn-LOH"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                    <color key="textColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="zVo-Oo-yM8"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="n60-7A-NpQ" firstAttribute="leading" secondItem="zVo-Oo-yM8" secondAttribute="leading" id="14x-kT-FjW"/>
                 <constraint firstItem="n60-7A-NpQ" firstAttribute="top" secondItem="zVo-Oo-yM8" secondAttribute="top" id="ADT-LW-X1Z"/>
-                <constraint firstItem="2uV-zL-MGT" firstAttribute="leading" secondItem="zVo-Oo-yM8" secondAttribute="leading" id="DgB-Bc-H5r"/>
-                <constraint firstItem="2uV-zL-MGT" firstAttribute="top" secondItem="n60-7A-NpQ" secondAttribute="bottom" id="Hej-oQ-y8e"/>
+                <constraint firstItem="2uV-zL-MGT" firstAttribute="bottom" secondItem="zVo-Oo-yM8" secondAttribute="bottom" id="G4O-MP-0o2"/>
+                <constraint firstItem="Z5v-1f-DUk" firstAttribute="leading" secondItem="zVo-Oo-yM8" secondAttribute="leading" constant="16" id="Sqn-a1-J4S"/>
+                <constraint firstItem="zVo-Oo-yM8" firstAttribute="trailing" secondItem="Z5v-1f-DUk" secondAttribute="trailing" constant="16" id="bBL-T2-Nji"/>
+                <constraint firstItem="2uV-zL-MGT" firstAttribute="top" secondItem="Z5v-1f-DUk" secondAttribute="bottom" constant="8" symbolic="YES" id="ddL-eN-ePQ"/>
                 <constraint firstItem="n60-7A-NpQ" firstAttribute="trailing" secondItem="zVo-Oo-yM8" secondAttribute="trailing" id="geQ-W6-VXj"/>
-                <constraint firstItem="2uV-zL-MGT" firstAttribute="bottom" secondItem="zVo-Oo-yM8" secondAttribute="bottom" id="huQ-5p-KUy"/>
-                <constraint firstItem="2uV-zL-MGT" firstAttribute="trailing" secondItem="zVo-Oo-yM8" secondAttribute="trailing" id="jAF-Zd-7Fe"/>
+                <constraint firstItem="Z5v-1f-DUk" firstAttribute="top" secondItem="n60-7A-NpQ" secondAttribute="bottom" constant="8" symbolic="YES" id="lsD-j5-OpR"/>
+                <constraint firstItem="2uV-zL-MGT" firstAttribute="trailing" secondItem="zVo-Oo-yM8" secondAttribute="trailing" id="nqZ-7x-fsx"/>
+                <constraint firstItem="2uV-zL-MGT" firstAttribute="leading" secondItem="zVo-Oo-yM8" secondAttribute="leading" id="sND-p3-TJB"/>
             </constraints>
-            <point key="canvasLocation" x="137.68115942028987" y="114.50892857142857"/>
+            <point key="canvasLocation" x="136.875" y="114.08450704225352"/>
         </view>
     </objects>
     <resources>
+        <image name="ic_search" width="50.5" height="50.5"/>
         <image name="ico_arrow_l_white" width="33" height="33"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
