--- a/Tabbar_/Second_Tab_ViewController.xib
+++ b/Tabbar_/Second_Tab_ViewController.xib
@@ -34,7 +34,7 @@
                                 <constraint firstAttribute="width" constant="44" id="Yda-Hv-0DO"/>
                                 <constraint firstAttribute="height" constant="44" id="u31-FK-am9"/>
                             </constraints>
-                            <state key="normal" image="ic_menu"/>
+                            <state key="normal" image="ico_menu"/>
                             <connections>
                                 <action selector="didPressMenu:" destination="-1" eventType="touchUpInside" id="T2L-hR-wUb"/>
                             </connections>
@@ -147,8 +147,8 @@
         </view>
     </objects>
     <resources>
-        <image name="ic_menu" width="33" height="33"/>
         <image name="ic_search" width="50.5" height="50.5"/>
+        <image name="ico_menu" width="31.5" height="31.5"/>
         <image name="ico_vip" width="58.5" height="58.5"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
