--- a/Tabbar_/Third_Tab_New_ViewController.xib
+++ b/Tabbar_/Third_Tab_New_ViewController.xib
@@ -33,7 +33,7 @@
                                 <constraint firstAttribute="width" constant="44" id="3zs-PM-y2O"/>
                                 <constraint firstAttribute="height" constant="44" id="KX8-4A-ApA"/>
                             </constraints>
-                            <state key="normal" image="ic_menu"/>
+                            <state key="normal" image="ico_menu"/>
                             <connections>
                                 <action selector="didPressMenu:" destination="-1" eventType="touchUpInside" id="JEU-qL-9hH"/>
                             </connections>
@@ -135,8 +135,8 @@
         </view>
     </objects>
     <resources>
-        <image name="ic_menu" width="33" height="33"/>
         <image name="ic_search" width="50.5" height="50.5"/>
+        <image name="ico_menu" width="31.5" height="31.5"/>
         <image name="ico_vip" width="58.5" height="58.5"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
